<resources>
    <string name="app_name">ExpensePlanner</string>
    <string name="total_balance">Total Balance </string>


    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">Sign-up</string>
    <string name="please_register_yourself_to_continue_with_the_amazing_experience">Please register yourself to continue with the amazing experience!</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name">enter your full name</string>
    <string name="email">Email*</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)*</string>
    <string name="select_your_dob">select your dob</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mobile">Mobile*</string>
    <string name="enter_your_mobile_no_without_91">enter your mobile no. (without +91)</string>
    <string name="enter_your_password">enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="i_agree_with_the_terms_of_service_and_privacy_policy">I agree with the Terms of Service and Privacy Policy</string>
    <string name="registerbtn">register</string>
    <string name="login">login</string>
    <string name="welcome_to_expense_planner">welcome to expense planner</string>
    <string name="register">register</string>
    <string name="emaillogin">Email</string>
    <string name="passwordlogin">Password</string>
    <string name="loginbtn">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now.</string>
    <string name="loading">Loading...</string>
    <string name="name">userName\n</string>
    <string name="dob">dob</string>
    <string name="registered_user_since">registered user since</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add">add</string>
    <string name="bank_info_hint">bank Info: </string>
    <string name="enter_your_bank_name">Enter your bank Name</string>
    <string name="_0_00">0.00 $</string>
    <string name="enter_your_balance">Enter your Balance</string>
    <string name="travelling_expense">Travelling Expense</string>
    <string name="enter_travelling_expense_here">Enter travelling expense here</string>
    <string name="payment">Payment</string>
    <string name="enter_payment_amount_here">Enter payment amount here</string>
    <string name="entertainment">Entertainment</string>
    <string name="enter_entertainment_expense_here">Enter entertainment expense here</string>
    <string name="generate_plan">Generate Plan</string>
    <string name="food">food\n</string>
    <string name="expense_planning">Expense Planning\n</string>
    <string name="total_available_balance">Total available balance</string>
    <string name="total_avilable_bal">0.00 $</string>
    <string name="add_saving_info">Add Saving Info</string>
    <string name="plan_expense">Plan Expense</string>
    <string name="check_upcoming_expenses">Check Upcoming Expenses</string>
    <string name="profile_details">Profile Details</string>
    <string name="expense_planner">Expense Planner</string>
    <string name="bank_and_balance_info">Bank and Balance Info</string>
    <string name="bank_info_label">bank_info_label</string>
    <string name="add_details">add</string>
    <string name="food_ex">Food</string>
    <string name="enter_food_expense_here">Enter food expense here</string>
    <string name="expense_v">$0.00</string>
    <string name="travel_v">$0.00</string>
    <string name="payemt_v">$0.00</string>
    <string name="entertainment_v">$0.00</string>
    <string name="bank_list">Bank List :</string>
    <string name="userguide">User Guide</string>
    <string name="under_maintenace">Under Maintenace .....</string>
    <string name="logout">Logout</string>
    <string name="login_page">Login Page</string>

</resources>