<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/balance_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/bank_and_balance_info"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/bank_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="16dp"
        android:hint="@string/enter_your_bank_name"/>

    <EditText
        android:id="@+id/balance_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:hint="@string/enter_your_balance"/>



    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_details"

        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/total_balance_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/total_balance"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_amount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_alignBaseline="@+id/total_balance_textview"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/bank_list_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/bank_list"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/bank_info_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_info_label"
        android:textSize="16sp"
        android:padding="16dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>


</LinearLayout>
