<!-- registration_layout.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_gray"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/sky_blue">

            <TextView
                android:id="@+id/textView_register_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textView_register_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_below="@id/textView_register_head"
                android:text="@string/please_register_yourself_to_continue_with_the_amazing_experience"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/RL_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">



            <TextView
                android:id="@+id/textView_register_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="6dp"
                android:text="@string/full_name" />



            <EditText
                android:id="@+id/editText_register_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_full_name"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:background="@android:color/transparent"
                android:hint="@string/enter_your_full_name"
                android:inputType="textPersonName"
                android:padding="16dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_name"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/textView_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/email" />



            <EditText
                android:id="@+id/editText_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_email"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:background="@android:color/transparent"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:padding="6dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_email"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/textView_register_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="6dp"
                android:text="@string/date_of_birth_dd_mm_yyyy" />



            <EditText
                android:id="@+id/editText_register_dob"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_dob"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/select_your_dob"
                android:inputType="date"
                android:padding="16dp"

                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_dob"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView_register_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/gender" />


            <RadioGroup
                android:id="@+id/radio_group_register_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_gender"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_500"
                    android:text="@string/female"
                    android:textColor="#555555"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:buttonTint="@color/purple_500"
                    android:text="@string/male"
                    android:textColor="#555555"
                    android:textSize="16sp" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_gender"
            android:layout_marginTop="10dp">



            <TextView
                android:id="@+id/textView_register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="6dp"
                android:text="@string/mobile" />



            <EditText
                android:id="@+id/editText_register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_mobile"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_mobile_no_without_91"
                android:inputType="phone"
                android:padding="6dp"

                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_pwd"
            android:layout_marginTop="10dp">


            <TextView
                android:id="@+id/textView_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/password" />


            <EditText
                android:id="@+id/editText_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:background="@android:color/transparent"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="6dp"

                android:textSize="16sp" />



        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/RL_cpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_pwd"
            android:layout_marginTop="10dp">


            <TextView
                android:id="@+id/textView_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/confirm_password" />


            <EditText
                android:id="@+id/editText_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_register_confirm_password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:background="@android:color/transparent"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:padding="6dp"

                android:textSize="16sp" />



        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkBox_terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_pwd"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/purple_500"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/i_agree_with_the_terms_of_service_and_privacy_policy"
            android:textColor="#444" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox_terms_conditions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/registerbtn" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />
    </LinearLayout>




</ScrollView>
